--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -78,10 +78,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64
-          secrets: |
-            "gpc=gpr.user=${{ github.actor }}
-            gpr.key=${{ secrets.GITHUB_TOKEN }}"
+          platforms: linux/amd64
 
 
       # Sign the resulting Docker image digest except on PRs.
