--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~13.3.5",
     "@angular/platform-browser-dynamic": "~13.3.5",
     "@angular/router": "~13.3.5",
-    "@mui/material": "^5.14.5",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.7",
     "i": "^0.3.7",
     "rxjs": "~7.5.5",
     "tslib": "^2.3.0",
@@ -32,7 +34,6 @@
     "@angular-devkit/build-angular": "~13.3.4",
     "@angular/cli": "~13.3.4",
     "@angular/compiler-cli": "~13.3.5",
-    "@truzzt/mui-lib": "1.0.0-alpha.3",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^17.0.30",
     "jasmine-core": "~4.1.0",
